--- a/career.html
+++ b/career.html
@@ -16,49 +16,59 @@
 
 <body>
 
-  <div id="navbar-placeholder"></div>
-
-  <header>
-    <h1 class="glitch">
-      <span id="typedText" data-text="Career Development "></span>
-      <span class="cursor"></span>
-    </h1>
-  </header>
-
-  <section id="presentation">
-    <div class="socials">
-      <a href="https://github.com/Ravemi987" target="_blank" class="icon">
-        <i class="fa-brands fa-github"></i> Github
-      </a>
-      <a href="https://www.linkedin.com/in/r%C3%A9mi-airiau-6a222a256/" target="_blank" class="icon">
-        <i class="fa-brands fa-linkedin"></i> Linkedin
-      </a>
-      <a href="https://discord.com/users/329288791091052544" target="_blank" class="icon">
-        <i class="fa-brands fa-discord"></i> Discord
-      </a>
-    </div>
-  </section>
+  <canvas id="particle-canvas"></canvas>
+  <div id="background-glow" class="background-glow"></div>
 
 
-  <section >
-    <p class="default-text scroll-appear">Section 1</p>
-    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
-  </section>
+  <div class="page-wrapper">
+    <div id="navbar-placeholder"></div>
 
-  <section>
-    <p class="default-text scroll-appear">Section 2</p>
-    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
-  </section>
+    <main>
+      <header>
+        <h1 class="glitch">
+          <span id="typedText" data-text="Career Development "></span>
+          <span class="cursor"></span>
+        </h1>
+      </header>
 
-  <section>
-    <p class="default-text scroll-appear">Section 3</p>
-    <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
-  </section>
+      <section id="presentation">
+        <div class="socials">
+          <a href="https://github.com/Ravemi987" target="_blank" class="icon">
+            <i class="fa-brands fa-github"></i> Github
+          </a>
+          <a href="https://www.linkedin.com/in/r%C3%A9mi-airiau-6a222a256/" target="_blank" class="icon">
+            <i class="fa-brands fa-linkedin"></i> Linkedin
+          </a>
+          <a href="https://discord.com/users/329288791091052544" target="_blank" class="icon">
+            <i class="fa-brands fa-discord"></i> Discord
+          </a>
+        </div>
+      </section>
 
-  <div id="footer-placeholder"></div>
-  
-  <!-- Lien JS -->
+
+      <section >
+        <p class="default-text scroll-appear">Section 1</p>
+        <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+      </section>
+
+      <section>
+        <p class="default-text scroll-appear">Section 2</p>
+        <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+      </section>
+
+      <section>
+        <p class="default-text scroll-appear">Section 3</p>
+        <p class="default-text scroll-appear"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maxime ducimus ad dolorum omnis, rerum voluptatibus rem sequi, quia, ipsa consectetur iusto culpa laborum ex eligendi sed iste reprehenderit molestiae!</p>
+      </section>
+
+    </main>
+
+    <div id="footer-placeholder"></div>
+  </div>
+
+  <script src="particles.js"></script>
   <script src="script.js"></script>
+
 </body>
 
 </html>
