--- a/index.html
+++ b/index.html
@@ -16,97 +16,108 @@
 
 <body>
 
-  <div id="navbar-placeholder"></div>
-
-  <header>
-    <h1 class="glitch">
-      <span id="typedText" data-text="Welcome to my Portfolio "></span>
-      <span class="cursor"></span>
-    </h1>
-  </header>
+  <canvas id="particle-canvas"></canvas>
+  <div id="background-glow" class="background-glow"></div>
 
 
-  <section id="presentation">
-    <p class="default-text scroll-appear">
-      Hello! My name is Rémi. I am currently a student at ENSEEIHT engineering school, located in Toulouse, France.
-      There, I study computer science and more specifically computer architecture, systems and networks.
-      I am mostly interested in Artificial Intelligence, Cybersecurity and Embedded Systems. Besides, I love
-      turning my knowledge into concrete applications through both academic and personal projects.
-      Finally, I am really looking forward to gain professional experience through internships.
-    </p>
+  <div class="page-wrapper">
+    <div id="navbar-placeholder"></div>
 
-    <div class="socials">
-      <a href="https://github.com/Ravemi987" target="_blank" class="icon">
-        <i class="fa-brands fa-github"></i> Github
-      </a>
-      <a href="https://www.linkedin.com/in/r%C3%A9mi-airiau-6a222a256/" target="_blank" class="icon">
-        <i class="fa-brands fa-linkedin"></i> Linkedin
-      </a>
-      <a href="https://discord.com/users/329288791091052544" target="_blank" class="icon">
-        <i class="fa-brands fa-discord"></i> Discord
-      </a>
-    </div>
-  </section>
+    <main>
 
-  <section >
-    <h1 class="scroll-appear"> Formation</h1>
+      <header>
+        <h1 class="glitch">
+          <span id="typedText" data-text="Welcome to my Portfolio "></span>
+          <span class="cursor"></span>
+        </h1>
+      </header>
 
-    <p class="default-text scroll-appear">
-      Before my engineering curriculum, I completed a Bachelor degree in Computer Science at the Université de Toulouse.
-      Consequently you will find below a quick history of my academic journey.
-    </p>
 
-    <div id="formationContent">
-      <span class="timeline"></span>
-      
-      <div class="default-text scroll-appear formation-div">
-        <h2>Engineering Degree</h2>
-        <span class="formation-spacer"></span>
-        <div class="formation-text">
-          <p>Specialized in Architecture, Systems and Networks</p>
-          <p>ENSEEIHT - Toulouse, France</p>
+      <section id="presentation">
+        <p class="default-text scroll-appear">
+          Hello! My name is Rémi. I am currently a student at ENSEEIHT engineering school, located in Toulouse, France.
+          There, I study computer science and more specifically computer architecture, systems and networks.
+          I am mostly interested in Artificial Intelligence, Cybersecurity and Embedded Systems. Besides, I love
+          turning my knowledge into concrete applications through both academic and personal projects.
+          Finally, I am really looking forward to gain professional experience through internships.
+        </p>
+
+        <div class="socials">
+          <a href="https://github.com/Ravemi987" target="_blank" class="icon">
+            <i class="fa-brands fa-github"></i> Github
+          </a>
+          <a href="https://www.linkedin.com/in/r%C3%A9mi-airiau-6a222a256/" target="_blank" class="icon">
+            <i class="fa-brands fa-linkedin"></i> Linkedin
+          </a>
+          <a href="https://discord.com/users/329288791091052544" target="_blank" class="icon">
+            <i class="fa-brands fa-discord"></i> Discord
+          </a>
         </div>
-        <p class="formation-date">2025-2027</p>
-      </div>
+      </section>
 
-      <div class="default-text scroll-appear formation-div">
-        <h2>Bachelor's Degree in Computer Science - Fundamental Track</h2>
-        <span class="formation-spacer"></span>
-        <div class="formation-text">
-          <p>University Degree in Computer Science (3 years of higher education)</p>
-          <p>University of Toulouse (Paul Sabatier) - Toulouse, France</p>
+      <section >
+        <h1 class="scroll-appear"> Formation</h1>
+
+        <p class="default-text scroll-appear">
+          Before my engineering curriculum, I completed a Bachelor degree in Computer Science at the Université de Toulouse.
+          Consequently you will find below a quick history of my academic journey.
+        </p>
+
+        <div id="formationContent">
+          <span class="timeline"></span>
+          
+          <div class="default-text scroll-appear formation-div">
+            <h2>Engineering Degree</h2>
+            <span class="formation-spacer"></span>
+            <div class="formation-text">
+              <p>Specialized in Architecture, Systems and Networks</p>
+              <p>ENSEEIHT - Toulouse, France</p>
+            </div>
+            <p class="formation-date">2025-2027</p>
+          </div>
+
+          <div class="default-text scroll-appear formation-div">
+            <h2>Bachelor's Degree in Computer Science - Fundamental Track</h2>
+            <span class="formation-spacer"></span>
+            <div class="formation-text">
+              <p>University Degree in Computer Science (3 years of higher education)</p>
+              <p>University of Toulouse (Paul Sabatier) - Toulouse, France</p>
+            </div>
+            <p class="formation-date">2024-2025</p>
+          </div>
+
+          <div class="default-text scroll-appear formation-div">
+            <h2>Bachelor's Degree in Computer Science</h2>
+            <span class="formation-spacer"></span>
+            <div class="formation-text">
+              <p>University Degree in Computer Science (2 years of higher education)</p>
+              <p>University of Toulouse (Paul Sabatier) - Toulouse, France</p>
+            </div>
+            <p class="formation-date">2022-2024</p>
+          </div>
+
+          <div class="default-text scroll-appear formation-div">
+            <h2>General Baccalauréat</h2>
+            <span class="formation-spacer"></span>
+            <div class="formation-text">
+              <p>Scientific Diploma - High Honors</p>
+              <p>Majors: Mathematics, Physics-Chemistry, Computer Science</p>
+              <p>Options: Advanced Mathematics, Latin</p>
+              <p>Lycée Stéphane Hessel - Toulouse, France</p>
+            </div>
+            <p class="formation-date">2019-2022</p>
+          </div>
         </div>
-        <p class="formation-date">2024-2025</p>
-      </div>
+      </section>
 
-      <div class="default-text scroll-appear formation-div">
-        <h2>Bachelor's Degree in Computer Science</h2>
-        <span class="formation-spacer"></span>
-        <div class="formation-text">
-          <p>University Degree in Computer Science (2 years of higher education)</p>
-          <p>University of Toulouse (Paul Sabatier) - Toulouse, France</p>
-        </div>
-        <p class="formation-date">2022-2024</p>
-      </div>
+    </main>
 
-      <div class="default-text scroll-appear formation-div">
-        <h2>General Baccalauréat</h2>
-        <span class="formation-spacer"></span>
-        <div class="formation-text">
-          <p>Scientific Diploma - High Honors</p>
-          <p>Majors: Mathematics, Physics-Chemistry, Computer Science</p>
-          <p>Options: Advanced Mathematics, Latin</p>
-          <p>Lycée Stéphane Hessel - Toulouse, France</p>
-        </div>
-        <p class="formation-date">2019-2022</p>
-      </div>
-    </div>
-  </section>
+    <div id="footer-placeholder"></div>
+  </div>
 
-  <div id="footer-placeholder"></div>
-
-  <!-- Lien JS -->
+  <script src="particles.js"></script>
   <script src="script.js"></script>
+
 </body>
 
 </html>
