--- a/navbar.html
+++ b/navbar.html
@@ -6,11 +6,22 @@
     <title></title>
   </head>
   <body>
-      <nav class="navbar">
-        <ul>
-        <li><a href="#" class="brand">
-            <span class="name">Rémi Airiau</span> | <span class="title">Engineer at ENSEEIHT</span></a>
-        </li>
+    <nav class="navbar">
+      <div class="brand-wrapper">
+        <a href="#" class="brand">
+          <span class="name">Rémi Airiau</span> 
+          <span class="title">Engineer at ENSEEIHT</span>
+        </a>
+        <!-- Bouton burger -->
+        <button class="burger" aria-label="Ouvrir le menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </button>
+      </div>
+
+      <!-- Menu principal -->
+      <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="courses.html">Courses</a></li>
         <li><a href="mobility.html">Mobility</a></li>
@@ -18,7 +29,7 @@
         <li><a href="activities.html">Sports & Activities</a></li>
         <li><a href="career.html">Career Development</a></li>
         <li><a href="contact.html">Contact</a></li>
-        </ul>
+      </ul>
     </nav>
   </body>
   </html>
