--- a/civic.html
+++ b/civic.html
@@ -58,7 +58,7 @@
       <section>
         <h1 class="engagement-title scroll-appear"> Net 7 </h1>
 
-        <div class="engagement-block scroll-appear">
+        <div class="engagement-block scroll-appear glass-effect">
           <div class="engagement-text">
             <p>
               Net7 is the the assocation of the school gathering all the passionate of computer science and
@@ -93,7 +93,7 @@
       <section>
         <h1 class="engagement-title scroll-appear"> BattleDev </h1>
 
-        <div class="engagement-block reverse scroll-appear short-text">
+        <div class="engagement-block reverse scroll-appear short-text glass-effect">
           <div class="engagement-text">
             <p>
               BattleDev is a programmaming competition organised by Thales, with a $1000 cashprize.
@@ -111,7 +111,7 @@
       <section>
         <h1 class="engagement-title scroll-appear"> Other </h1>
 
-        <div class="engagement-block scroll-appear short-text">
+        <div class="engagement-block scroll-appear short-text glass-effect">
           <div class="engagement-text">
             <p>
               Like many students, I will take any opportunity to participate in theater plays,
