--- a/courses.html
+++ b/courses.html
@@ -61,9 +61,9 @@
 
 
       <section>
-        <h2 class="scroll-appear">Bachelor's Degree courses content</h2>
+        <h1 class="scroll-appear">Bachelor's Degree courses content</h1>
 
-        <div class="course-list green-list scroll-appear">
+        <div class="course-list green-list scroll-appear glass-effect">
           <h3>Software Development Methodology / Software Engineering</h3>
           <ul>
             <li><span class="chevron">&gt;</span> Verification, complexity analysis, security</li>
@@ -98,9 +98,9 @@
       </section>
 
       <section>
-        <h2 class="scroll-appear">Engineering Degree courses</h2>
+        <h1 class="scroll-appear">Engineering Degree courses</h1>
 
-        <div class="course-list blue-list scroll-appear">
+        <div class="course-list blue-list scroll-appear glass-effect">
           <h3>Architecture, Systems and Networks - Semester 7</h3>
           <ul>
             <li><span class="chevron">&gt;</span> Functional Programming and Language Translation</li>
@@ -129,7 +129,7 @@
         <div id="projectContent">
 
           <div id="projectContent-top">
-            <div class="flashcard-div chess scroll-appear" style="--bg-image: url('img/chess-bg.jpg');">
+            <div class="flashcard-div chess scroll-appear glass-effect" style="--bg-image: url('img/chess-bg.jpg');">
               <div class="flashcard-logo">
                 <i class="fas fa-chess-pawn flashcard-icon"></i>
               </div>
@@ -148,7 +148,7 @@
               </div>
             </div>
 
-            <div class="flashcard-div cyber scroll-appear">
+            <div class="flashcard-div cyber scroll-appear glass-effect">
               <div class="flashcard-logo">
                 <i class="fa-solid fa-lock flashcard-icon"></i>
               </div>
@@ -168,7 +168,7 @@
               </div>
             </div>
 
-            <div class="flashcard-div neurals scroll-appear">
+            <div class="flashcard-div neurals scroll-appear glass-effect">
               <div class="flashcard-logo">
                 <i class="fa-solid fa-brain flashcard-icon"></i>
               </div>
@@ -189,7 +189,7 @@
 
           <div id="projectContent-bottom">
             
-            <div class="flashcard-div robot scroll-appear">
+            <div class="flashcard-div robot scroll-appear glass-effect">
               <div class="flashcard-logo">
                 <i class="fa-solid fa-robot flashcard-icon"></i>
               </div>
@@ -210,7 +210,7 @@
               </div>
             </div>
 
-            <div class="flashcard-div proc scroll-appear">
+            <div class="flashcard-div proc scroll-appear glass-effect">
               <div class="flashcard-logo">
                 <i class="fa-solid fa-microchip flashcard-icon"></i>
               </div>
@@ -227,7 +227,7 @@
               </div>
             </div>
 
-            <div class="flashcard-div hackaton scroll-appear">
+            <div class="flashcard-div hackaton scroll-appear glass-effect">
               <div class="flashcard-logo">
                 <i class="fa-solid fa-database flashcard-icon"></i>
               </div>
