--- a/navbar.html
+++ b/navbar.html
@@ -6,11 +6,11 @@
     <title></title>
   </head>
   <body>
-    <nav class="navbar">
+    <nav class="navbar glass-effect">
       <div class="brand-wrapper">
         <a href="#" class="brand">
           <span class="name">Rémi Airiau</span> 
-          <span class="title">Engineer at ENSEEIHT</span>
+          <!-- <span class="title">Engineer at ENSEEIHT</span> -->
         </a>
         <!-- Bouton burger -->
         <button class="burger" aria-label="Ouvrir le menu">
