--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div id="formationContent">
           <span class="timeline"></span>
           
-          <div class="default-text scroll-appear formation-div">
+          <div class="default-text scroll-appear formation-div glass-effect">
             <h2>Engineering Degree</h2>
             <span class="formation-spacer"></span>
             <div class="formation-text">
@@ -76,7 +76,7 @@
             <p class="formation-date">2025-2027</p>
           </div>
 
-          <div class="default-text scroll-appear formation-div">
+          <div class="default-text scroll-appear formation-div glass-effect">
             <h2>Bachelor's Degree in Computer Science - Fundamental Track</h2>
             <span class="formation-spacer"></span>
             <div class="formation-text">
@@ -86,7 +86,7 @@
             <p class="formation-date">2024-2025</p>
           </div>
 
-          <div class="default-text scroll-appear formation-div">
+          <div class="default-text scroll-appear formation-div glass-effect">
             <h2>Bachelor's Degree in Computer Science</h2>
             <span class="formation-spacer"></span>
             <div class="formation-text">
@@ -96,7 +96,7 @@
             <p class="formation-date">2022-2024</p>
           </div>
 
-          <div class="default-text scroll-appear formation-div">
+          <div class="default-text scroll-appear formation-div glass-effect">
             <h2>General Baccalauréat</h2>
             <span class="formation-spacer"></span>
             <div class="formation-text">
