--- a/civic.html
+++ b/civic.html
@@ -35,10 +35,7 @@
       <section id="presentation">
         <p class="default-text scroll-appear">
           As I arrived at ENSEEIHT at the beginning of September, I did not valide any civic engagement
-          just yet, though I have cool projects and ideas in mind. This includes taking part in the technical
-          association Net7,the computer sience's association of the school, as well as participating in several
-          challenges or events organised by industrial companies such as Thales and this way representing the school, and finally
-          attending conferences.
+          just yet, though I have cool projects and ideas in mind.
         </p>
 
         <div class="socials">
@@ -48,80 +45,6 @@
           <a href="https://www.linkedin.com/in/r%C3%A9mi-airiau-6a222a256/" target="_blank" class="icon">
             <i class="fa-brands fa-linkedin"></i> Linkedin
           </a>
-          <a href="https://discord.com/users/329288791091052544" target="_blank" class="icon">
-            <i class="fa-brands fa-discord"></i> Discord
-          </a>
-        </div>
-      </section>
-
-
-      <section>
-        <h1 class="engagement-title scroll-appear"> Net 7 </h1>
-
-        <div class="engagement-block scroll-appear glass-effect">
-          <div class="engagement-text">
-            <p>
-              Net7 is the the assocation of the school gathering all the passionate of computer science and
-              programmers. They develop and maintain students' services, coordinate formations and events, 
-              coding and cybersecurity challenges.
-            </p>
-
-            <p>
-              Especially, I want to be part of Pony7, the cybersecurity subclub of Net7.
-              In fact, cybersecurity is one of my top favorite domain in computer science, 
-              alongside embedded systems programming and artificial intelligence.
-              This would be a great occasion to try CTF (Capture The Flag), discover Open-Source Intelligence (OSINT)
-              and attend to multiple conferences led by alumni or professionals. I could also possibly set up simple
-              practical formations myself about programming in cybersecurity, as I accumulated a certain knowledge thanks
-              to my Bachelor's Degree at the University of Toulouse.
-            </p>
-
-            <p>
-              With this commitment, I aim to promote the school, help other students and
-              strengthen my academic profile to open up more opportunities,
-              such as integrate the cybersecurity "TLS-SEC" selective curriculum in third year.
-            </p>
-          </div>
-          <div class="engagement-image" id="net7-img">
-            <img src="./img/net7.jpg" alt="Cybersecurity illustration">
-          </div>
-        </div>
-
-
-      </section>
-
-      <section>
-        <h1 class="engagement-title scroll-appear"> BattleDev </h1>
-
-        <div class="engagement-block reverse scroll-appear short-text glass-effect">
-          <div class="engagement-text">
-            <p>
-              BattleDev is a programmaming competition organised by Thales, with a $1000 cashprize.
-              As one the first ten registrants, I have been invited by Thales themselves to compete on-site ! 
-              I am very excited to meet new people and talk with professionals of their projects,
-              since I am interested in joining Thales is the next few years.
-            </p>
-          </div>
-          <div class="engagement-image" id="battledev-img">
-              <img src="./img/battledev.jpg" alt="Coding competition">
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <h1 class="engagement-title scroll-appear"> Other </h1>
-
-        <div class="engagement-block scroll-appear short-text glass-effect">
-          <div class="engagement-text">
-            <p>
-              Like many students, I will take any opportunity to participate in theater plays,
-              music representations, sportive activities, interviews and more, in order to discover
-              the rich assiociative life at ENSEEIHT
-            </p>
-          </div>
-          <div class="engagement-image" id="student-img">
-            <img src="./img/studentlife.jpg" alt="Student activities">
-          </div>
         </div>
       </section>
 
