--- a/courses.html
+++ b/courses.html
@@ -56,6 +56,7 @@
         </div>
       </section>
 
+      <div class="glow-separator"></div>
 
       <section>
         <h1 class="scroll-appear">Bachelor's Degree courses content</h1>
@@ -119,6 +120,8 @@
           </ul>
         </div>
       </section>
+
+      <div class="glow-separator"></div>
 
       <section>
         <h1 class="scroll-appear">Projects</h1>
