--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         </div>
       </section>
 
+      <div class="glow-separator"></div>
+
       <section >
-        <h1 class="scroll-appear"> Formation</h1>
+        <h1 class="scroll-appear">Formation</h1>
 
         <p class="default-text scroll-appear">
           Before my engineering curriculum, I completed a Bachelor degree in Computer Science at the Université de Toulouse.
