career, sports & civic

--- a/activities.html
+++ b/activities.html
@@ -39,40 +39,85 @@
       </header>
 
 
-      <section id="presentation">
-        <div class="socials">
-          <a href="https://github.com/Ravemi987" target="_blank" class="icon">
-            <i class="fa-brands fa-github"></i> Github
-          </a>
-          <a href="https://www.linkedin.com/in/r%C3%A9mi-airiau-6a222a256/" target="_blank" class="icon">
-            <i class="fa-brands fa-linkedin"></i> Linkedin
-          </a>
-        </div>
-      </section>
-
-      <section class="activities-section-wrapper">
-
-        <section class="activities-section" id="trumpet">
-          <h1 class="scroll-appear"> Trumpet </h1>
+      <div class="activities-scroll-wrapper">
+        <section class="immersive-section" id="trumpet">
+          <div class="immersive-overlay"></div>
+          
+          <div class="glass-float-card scroll-appear">
+            <div class="card-header">
+              <div class="icon-circle"><i class="fas fa-bullhorn"></i></div>
+              <h2>Trumpet</h2>
+            </div>
+            <p>
+              I started playing the trumpet at the age of 6 and practiced for over 10 years. 
+              During my time at music school, I earned several diplomas attesting to my technical skills 
+              and theoretical knowledge. I performed in various orchestras and bandas for numerous events.
+            </p>
+          </div>
         </section>
 
-        <section class="activities-section" id="drums">
-          <h1 class="scroll-appear"> Drums </h1>
+        <section class="immersive-section" id="drums">
+          <div class="immersive-overlay"></div>
+
+          <div class="glass-float-card scroll-appear">
+            <div class="card-header">
+              <div class="icon-circle"><i class="fas fa-drum"></i></div>
+              <h2>Drums</h2>
+            </div>
+            <p>
+              Later, I started playing the drums for about 4 years. I quickly reached an 
+              intermediate-to-advanced level thanks to my prior experience with musical groups 
+              and my solid knowledge in music theory.
+            </p>
+          </div>
         </section>
 
-        <section class="activities-section" id="piano">
-          <h1 class="scroll-appear"> Piano </h1>
+        <section class="immersive-section" id="piano">
+          <div class="immersive-overlay"></div>
+
+          <div class="glass-float-card scroll-appear">
+            <div class="card-header">
+              <div class="icon-circle"><i class="fas fa-music"></i></div>
+              <h2>Piano</h2>
+            </div>
+            <p>
+              In addition, I have been playing the piano as a self-taught musician since childhood, 
+              focusing mainly on learning and interpreting my favorite movie soundtracks.
+            </p>
+          </div>
         </section>
 
-        <section class="activities-section" id="football">
-          <h1 class="scroll-appear"> Football </h1>
+        <section class="immersive-section" id="football">
+          <div class="immersive-overlay"></div>
+
+          <div class="glass-float-card scroll-appear">
+            <div class="card-header">
+              <div class="icon-circle"><i class="fas fa-futbol"></i></div>
+              <h2>Football</h2>
+            </div>
+            <p>
+              In parallel with music, I played football in a club for more than 10 years.
+              This competitive experience greatly developed my team spirit, discipline and perseverance.
+            </p>
+          </div>
         </section>
 
-        <section class="activities-section" id="table-tennis">
-          <h1 class="scroll-appear"> Table Tennis </h1>
+        <section class="immersive-section" id="table-tennis">
+          <div class="immersive-overlay"></div>
+
+          <div class="glass-float-card scroll-appear">
+            <div class="card-header">
+              <div class="icon-circle"><i class="fas fa-table-tennis"></i></div>
+              <h2>Table Tennis</h2>
+            </div>
+            <p>
+              I have played Table Tennis as a hobby since a very young age, particularly 
+              through intense matches with my brother, sharpening my reflexes and focus.
+            </p>
+          </div>
         </section>
 
-      </section>
+      </div>
 
     </main>
 
